--- a/RWDF_L2_Start/main.css
+++ b/RWDF_L2_Start/main.css
@@ -105,6 +105,7 @@ ul {
 .nav a {
   text-decoration: none;
   color: #616161;
+  padding: 1.5em; /*padding added to center list names */
 }
 
 .nav a:hover {
@@ -168,7 +169,7 @@ main {
  */
 
 .top-news {
-  float: right;
+  float: right; 
   width: 100%; /*change to 100%*/
   height: 300px;
   border-bottom: 1px solid #E0E0E0;
@@ -199,6 +200,8 @@ main {
 .top-news__item a {
   text-decoration: none;
   color: #666;
+  padding-top: 1em; /* padding added for fat finger*/
+  padding-bottom: 1em;
 }
 
 .top-news__item a:hover,
@@ -215,7 +218,7 @@ main {
 
 .scores {
   width: 100%; /*change to 100%*/
-  float: left;
+  float: right;
   padding-top: 1em;
 }
 
@@ -263,7 +266,7 @@ main {
  */
 
 .weather {
-  float: right;
+  /*float: right; */
   width: 100%; /*change to 100%*/
   padding: 1em;
 }
@@ -285,7 +288,7 @@ main {
 }
 
 .weather__today__image {
-  vertical-align: middle
+  vertical-align: middle;
 }
 
 .weather__today__temp {
@@ -314,7 +317,7 @@ main {
 
 /*
  *
- * Weather
+ * Latest news
  *
  */
 
@@ -341,6 +344,8 @@ main {
 .snippet__title a {
   text-decoration: none;
   color: #666;
+  padding-top: 1em;
+  padding-bottom: 1em; /* padding added for fat finger*/
 }
 
 .snippet__title a:hover,
@@ -369,4 +374,5 @@ footer li {
 footer a {
   text-decoration: none;
   color: #333;
+  padding: 1em; /* padding added for fat finger*/
 }
