--- a/Lesson 14 Q11/main.css
+++ b/Lesson 14 Q11/main.css
@@ -1,5 +1,4 @@
-body, 
-html {
+body, html {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -12,20 +11,11 @@ body {
   color: #424242;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
+h1, h2, h3, h4, h5 {
   margin: 0; 
 }
 
-header,
-nav, 
-footer, 
-section, 
-article, 
-div {
+header, nav, footer, section, article, div {
   box-sizing: border-box;
 }
 
@@ -178,7 +168,7 @@ main {
  */
 
 .top-news {
-  height: 300px;
+  height: 230px;
   border-bottom: 1px solid #E0E0E0;
   padding: 1em;
 }
