--- a/ProjectBuildaPortfolioSite/css/main.css
+++ b/ProjectBuildaPortfolioSite/css/main.css
@@ -1,18 +1,17 @@
-body, html {
+body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  font-family: Roboto;
-  font-size: 12px;
+  font-family: 'Montserrat';
+   font-size: 12px;
   color: #2d3c49;
 }
 
+
+/*
+
 h1, h2, h3 {
   margin: 0; 
+
 }
 
 header, nav, footer, section, article, div {
@@ -36,6 +35,15 @@ header, nav, footer, section, article, div {
   margin-right: auto;
 }
 
+.header__div2 {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 5%;
+  text-align: right;
+
+}
+
 .header__title .header__name {
   font-weight: 300;
   font-size: 3em;
@@ -50,3 +58,4 @@ header, nav, footer, section, article, div {
   vertical-align: top;
   margin-top: 12px;
 }
+*/
