--- a/ProjectBuildaPortfolioSite/css/header.css
+++ b/ProjectBuildaPortfolioSite/css/header.css
@@ -1,12 +1,12 @@
 .header {
   background-color: #ffffff;
-  display: flex;  
+  display: flex; 
+  flex-wrap: wrap; 
   min-height: 60px;
-  
+  max-width: 100%;
   padding: 10px 10px;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
   border-bottom: 2px solid #7d97ad; 
 }
 
@@ -16,7 +16,6 @@
   /*display: flex; */
   margin-left: auto;
   justify-content: flex-end;
-
 }
 
 .header__img img {
@@ -27,8 +26,8 @@
   margin: 0 10px;
   padding: 0 10px;
   text-transform: uppercase;
-
 }
+
 .header__name {
   letter-spacing: 1.4px;
 }
