--- a/ProjectBuildaPortfolioSite/css/main.css
+++ b/ProjectBuildaPortfolioSite/css/main.css
@@ -1,16 +1,35 @@
 body {
-  margin: 0;
-  padding: 0;
+  margin: 1em;
+  padding: 1em;
   font-family: 'Montserrat';
-   font-size: 12px;
+  font-size: 12px;
   color: #2d3c49;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 p, h1 {
   text-transform: uppercase;
   text-align: center;
+  letter-spacing: 1.4px;
 }
 
+h2 {
+  color: #7d97ad;
+}
+
+p {
+  font-size: 1.2em;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: green;
+}
 
 .featuredWork {
   display: flex;
@@ -19,8 +38,6 @@ p, h1 {
   align-content: space-around;
   align-items: center;
   width: 100%;
-  
- 
 }
 
 .mainPhoto {
@@ -32,72 +49,39 @@ p, h1 {
 }
 
 .mainPhoto img {
-	
-	width: 70%;
-	padding: 2em;
+	max-width: 100%;
+	padding: 2em 0em;
 }
 
-.featuredWork h1 {
+.featuredWork h2 {
 	flex: 100%;
-	
+	letter-spacing: 1.4px;
 	}
 
-	.portfolio {
-	display: flex;
-	 flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-between;
-  
- 
-}
-
-.portfolio img {
+.container {
 	display: flex;
 	flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+}
+
+.container img {
 	height: 100%;
 	width: auto;
-	padding: 1em;
+	padding: 1.5em;
 }
 
 .portfolio-1, .portfolio-2, .portfolio-3 {
 	flex-direction: column;
-	width: 33.3333%;
-      height: 120px;
-      display: flex;
-	  
-      vertical-align: middle;
-      background:#eee;
-      
-      text-align: center;
+	width: 360px;
+  height: auto;
+  display: flex;
+	vertical-align: middle;
+  text-align: center;
 }
 
-
-.article {
-	
+.article h2 {
+  color: #2d3c49;
+  text-transform: uppercase;
+  letter-spacing: 1.4px;
 }
-	
-	
-/*
-
-
-.portfolio {
-	display: flex;
-	 flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-.portfolio img {
-	display: flex;
-	flex-wrap: wrap;
-	height: 100px;
-	width: 150px;
-	padding: 1em;
-}
-
-.article p {
-	
-		
-}
-*/
